plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'java'
}
sourceCompatibility = '17'

group 'be.hokkaydo'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    implementation 'org.mnode.ical4j:ical4j:1.0.2'
}

test {
    useJUnitPlatform()
}

shadowJar {
    manifest {
        attributes(
                'Main-Class': 'be.hokkaydo.Main'
        )
    }
}

